fixtures/frontend/milestone-2/invalid/value-annotation-type-mismatch/main.aivi
value answer:Text = 42
